hphp/hack/test/typecheck/classname/bad_subclass.php.exp
File "bad_subclass.php", line 17, characters 7-12:
Class BadSub does not correctly implement all required members  (Typing[4110])
File "bad_subclass.php", line 17, characters 22-26:
Some members are incompatible with those declared in type Super
Read the following to see why:
File "bad_subclass.php", line 18, characters 19-33:
Member nameOfISubclass has the wrong type
File "bad_subclass.php", line 8, characters 57-57:
Expected I
File "bad_subclass.php", line 18, characters 48-53:
But got C_notI
